--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    
+
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
@@ -14,6 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyService"
         tools:targetApi="31">
+        <service
+            android:name=".MyBoundService"
+            android:enabled="true"
+            android:exported="false"></service>
         <service
             android:name=".MyForegroundService"
             android:enabled="true" />
